--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@qubit/buble": "^0.19.10"
+    "@qubit/buble": "^0.19.10",
+    "@qubit/jolt": "^7.66.2",
+    "@qubit/poller": "^2.2.0",
+    "sync-p": "^1.3.0"
   },
   "jest": {
     "transform": {
