--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "format": "prettier-standard"
+    "format": "prettier-standard",
+    "lint": "healthier"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@qubit/utils": "^1.1.0",
+    "healthier": "^4.0.0",
     "jest": "^26.6.3",
     "preact": "^10.5.13",
     "prettier-standard": "^16.4.1"
