--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@qubit/add-stylesheet": "^1.2.0",
     "@qubit/buble": "^0.19.10",
     "@qubit/jolt": "^7.66.2",
     "@qubit/poller": "^2.2.0",
+    "less": "^3.13.1",
     "sync-p": "^1.3.0"
   },
   "jest": {
