Add ability to import styles in tests

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.js?$": "./index.js"
+      ".*$": "./index.js"
     }
   },
   "devDependencies": {
