--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-jsx": "^7.16.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@qubit/add-stylesheet": "^1.2.0",
     "@qubit/buble": "^0.19.10",
     "@qubit/jolt": "^7.66.2",
